[package]
name = "pierro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmic-text = "0.11.2"
femtovg = "0.9.1"
winit = "0.28.1"
glutin = "0.30.0"
glutin-winit = "0.3.0"
raw-window-handle = "0.5.0"

[[example]]
name = "demo"
path = "examples/demo.rs"